# TT_Highlight_Clipper

./: .gitattributes  .gitignore  README.md  progress.md  pyproject.toml  requirements-gpu.txt  requirements.txt
docs/: 00_GLOSSARY.md  01_JOB_LAYOUT.md  02_CONFIG.md  03_STEP_RUNNER.md  10_STEP_PREPROCESS.md  11_STEP_TABLE_ROI.md  12_STEP_AUDIO_EVENTS.md  13_STEP_VIDEO_ACTIVITY.md  14_STEP_RALLY_SEGMENT.md  15_STEP_SCOREBOARD_OCR.md  16_STEP_BALL_TRACKING.md  17_STEP_FEATURES.md  18_STEP_SCORING.md  19_STEP_SELECTION.md  20_STEP_EXPORT.md  30_UI_STREAMLIT.md  31_CLI.md  32_DEBUG_ARTIFACTS.md  33_TESTS.md
frontend/: index.html
frontend/roi_picker/: index.html
src/tt_highlights/: __init__.py  __main__.py  app.py  cli.py  config.py  default_config.yaml  diagnose.py  inspector.py  job.py  media_server.py  recent.py  runtime.py
src/tt_highlights/steps/: __init__.py  audio_events.py  ball_tracking.py  export.py  features.py  player_motion.py  pose_estimation.py  preprocess.py  rally_segment.py  scoreboard_ocr.py  scoring.py  selection.py  setup.py  table_roi.py  video_activity.py
